@@ -11,12 +11,17 @@ ikiwiki (2.40) UNRELEASED; urgency=low
 
 ikiwiki (2.31.3) unstable; urgency=high
 
+  [ Josh Triplett ]
   * Do not allow the about: URI scheme; some browsers interpret about:
     URIs like a limited version of data: URIs.  In particular, some
     versions of Internet Explorer interpret arbitrary HTML content in
     about: URIs.
   * Also filter the attributes cite, longdesc, and usemap, which can contain
     URIs.
+
+  [ Joey Hess ]
+  * meta: Check that the urls provided for authorurl, permalink, and openid
+    are safe and can't contain javascript.
 
  -- Josh Triplett <josh@freedesktop.org>  Sun, 10 Feb 2008 13:59:00 -0800
 
